Update `QuarkusTestResource` to `WithTestResource` annotations (#1127)
Signed-off-by: Eric Deandrea <edeandrea@redhat.com>